--- a/html/calendar-events.html
+++ b/html/calendar-events.html
@@ -15,10 +15,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>CSL Virtual Camp</title>
+    <title>Calendar Event</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <!-- Bootstrap CSS -->
+    <meta property="og:image" content="https://www.misla.org/assets/img/preview-misla.png">
+    <meta property="og:image:secure_url" content="https://www.misla.org/assets/img/preview-misla.png">
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
