--- a/index.html
+++ b/index.html
@@ -24,9 +24,26 @@
   <!-- BOOTSTRAP CSS-->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <!-- FONTS -->
-  <meta property="og:image" content="https://www.misla.org/assets/img/preview-misla.png" />
+<!--  -->
+  <link rel="canonical" href="http://misla.org/" />
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="MISLA - Hire Us to build your website">
+  <meta property="og:description" content="Coding Bootcamps. Learn to code LIKE A BOSS with one of our ongoing bootcamps. Animation. Video Game Design & Development. Web Design...">
+  <meta property="og:url" content="http://misla.org/">
+  <meta property="og:site_name" content="MISLA">
+  <meta property="og:image" content="https://www.misla.org/assets/img/preview-misla.png">
   <meta property="og:image:secure_url" content="https://www.misla.org/assets/img/preview-misla.png">
+  <meta property="og:image:width" content="500">
+  <meta property="og:image:height" content="250">
+  <meta property="og:image:alt" content="MISLA">
+  <meta property="og:image:type" content="image/png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Marty World - 2020 Coding + Creative Camps">
+  <meta name="twitter:description" content="Coding Bootcamps. Learn to code LIKE A BOSS with one of our ongoing bootcamps. Animation. Video Game Design & Development. Web Design...">
   <meta name="twitter:image" content="https://www.misla.org/assets/img/preview-misla.png">
+<!-- / -->
+
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet" />
   <!-- FONT-ICONS CSS-->
@@ -157,7 +174,7 @@
 <section id="about" class="about-us-area section-padding">
   <div class="container">
     <div class="row">
-      <section id="team" class="our-team-area section-padding">
+      <section id="team" class="our-team-area section-padding" style="padding-top: 0">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
@@ -167,14 +184,93 @@
           <div class="row">
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/cas.webp" alt="" class="img-responsive" />
+                <img src="assets/img/team/MARTY_head_CASSIE.jpg" alt="" class="img-responsive" />
                 <h4 class="team-member">Cassie Betts</h4>
                 <h6>Founder</h6>
-                <p>
-                  Startup Entrepreneur. <br />
-                  Diversity In Tech Activist. <br />
-                  Programmer.
-                </p>
+<!--                <p>-->
+<!--                  Startup Entrepreneur. <br />-->
+<!--                  Diversity In Tech Activist. <br />-->
+<!--                  Programmer.-->
+<!--                </p>-->
+                <ul class="team-social">
+                  <li>
+                    <a href="https://www.facebook.com/cassiebettscouture" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://twitter.com/cassiebetts" target="_blank"><i class="fa fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/instabetts" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://linkedin.com/in/cassiebetts" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <div class="single-team text-center">
+                <img src="assets/img/team/josh.png" alt="" class="img-responsive" />
+                <h4 class="team-member">Josh Sykes</h4>
+                <h6>Lead designer</h6>
+<!--                <p>-->
+<!--                  Startup Entrepreneur. <br />-->
+<!--                  Diversity In Tech Activist. <br />-->
+<!--                  Programmer.-->
+<!--                </p>-->
+                <ul class="team-social">
+                  <li>
+                    <a href="https://www.facebook.com/cassiebettscouture" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://twitter.com/cassiebetts" target="_blank"><i class="fa fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/instabetts" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://linkedin.com/in/cassiebetts" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <div class="single-team text-center">
+                <img src="assets/img/team/MARTY_head_eman.jpg" alt="" class="img-responsive" />
+                <h4 class="team-member">Eman Barkley</h4>
+                <h6>Asst. Manager</h6>
+<!--                <p>-->
+<!--                  High School Freshman. Student Teacher. <br />-->
+<!--                  Aspiring Engineer.-->
+<!--                </p>-->
+                <ul class="team-social">
+                  <li>
+                    <a href="https://www.facebook.com/cnj.smith.1" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/therealmisla/ " target="_blank"><i class="fa fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://www.youtube.com/channel/UCD-EbiAenQUzloDRkB7M4AA?view_as=subscriber" target="_blank"><i class="fa fa-youtube"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+
+            <div class="col-md-3 col-sm-6">
+              <div class="single-team text-center">
+                <img src="assets/img/team/MARTY_head_armanti.jpg" alt="" class="img-responsive" />
+                <h4 class="team-member">Armanti Benjamin</h4>
+                <h6>Senior Developer</h6>
+<!--                <p>-->
+<!--                  Startup Entrepreneur. <br>-->
+<!--                  Diversity In Tech Activist. <br />-->
+<!--                  Programmer.-->
+<!--                </p>-->
                 <ul class="team-social">
                   <li>
                     <a href="https://www.facebook.com/cassiebettscouture" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -196,10 +292,10 @@
                 <img src="assets/img/team/cam.webp" alt="" class="img-responsive" />
                 <h4 class="team-member">Cameron Smith</h4>
                 <h6>Asst. Web Designer</h6>
-                <p>
-                  High School Freshman. Student Teacher. <br />
-                  Aspiring Engineer.
-                </p>
+<!--                <p>-->
+<!--                  High School Freshman. Student Teacher. <br />-->
+<!--                  Aspiring Engineer.-->
+<!--                </p>-->
                 <ul class="team-social">
                   <li>
                     <a href="https://www.facebook.com/cnj.smith.1" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -221,11 +317,11 @@
                 <img src="assets/img/team/jai.webp" alt="" class="img-responsive" />
                 <h4 class="team-member">Jaiden Smith</h4>
                 <h6>Asst. to the Code Ninja</h6>
-                <p>
-                  Student Teacher. <br />
-                  Future Youtuber. <br />
-                  Roblox Master.
-                </p>
+<!--                <p>-->
+<!--                  Student Teacher. <br />-->
+<!--                  Future Youtuber. <br />-->
+<!--                  Roblox Master.-->
+<!--                </p>-->
                 <ul class="team-social">
                   <li>
                     <a href="https://www.facebook.com/cnj.smith.1" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -247,11 +343,11 @@
                 <img src="assets/img/team/2.png" alt="" class="img-responsive" />
                 <h4 class="team-member">Chris Clarke</h4>
                 <h6>consultant code ninja</h6>
-                <p>
-                  Startup Entrepreneur<br />
-                  Software Engineer. <br />
-                  Industry veteran
-                </p>
+<!--                <p>-->
+<!--                  Startup Entrepreneur<br />-->
+<!--                  Software Engineer. <br />-->
+<!--                  Industry veteran-->
+<!--                </p>-->
                 <ul class="team-social">
                   <li>
                     <a href="https://www.facebook.com/afroradiohead" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -264,6 +360,33 @@
                   </li>
                   <li>
                     <a href="https://www.linkedin.com/in/afroradiohead/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6">
+              <div class="single-team text-center">
+                <img src="assets/img/team/bilal.png" alt="M Bilal" class="img-responsive" />
+                <h4 class="team-member">M Bilal</h4>
+                <h6>Web Developer </h6>
+<!--                <p>-->
+<!--                  Web Developer <br />-->
+<!--                  Future Youtuber. <br />-->
+<!--                  Roblox Master.-->
+<!--                </p>-->
+                <ul class="team-social">
+                  <li>
+                    <a href="https://www.facebook.com/bilal.jani.1460" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/Mbilallayers" target="_blank"><i class="fa fa-github"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/muhammadbilal083/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </li>
+                  <li>
+                      <a href="https://www.linkedin.com/in/muhammad-bilal-7045a8152/" target="_blank"><i class="fa fa-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
