--- a/html/chairman-speech.html
+++ b/html/chairman-speech.html
@@ -120,7 +120,7 @@
                     to apply for a MISLA scholarship!
                     <br>
                     <br/>
-                    MISLA- Made in South LA is a fiscally sponsored project of COMMUNITY ECONOMIC DEVELOPMENT CORPORATION (CEDC), a California non profit Corporation, and registered 501(c)(3) organization, <b>Tax ID (EIN) 88-0306149</b>
+                    MISLA- Made in South LA is a fiscally sponsored project of COMMUNITY ECONOMIC DEVELOPMENT CORPORATION (CEDC), a Nevada non profit corporation, and registered 501(c)(3) organization, <b>Tax ID (EIN) 88-0306149</b>
                     <br>
                     <br/>
                     Click <a href="https://marty.world/services.html" target = "_blank">here</a>
