--- a/html/blog.html
+++ b/html/blog.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>MISLA Blog</h1>
+                <h1>Random Awesomeness</h1>
             </div>
         </div>
     </div>
