update the partner

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <div class="single-team text-center">
                 <img src="assets/img/team/MARTY_head_CASSIE.jpg" alt="" class="img-responsive" />
                 <h4 class="team-member">Cassie Betts</h4>
-                <h6>Founder</h6>
+                <h6>Founder/ CEO</h6>
 <!--                <p>-->
 <!--                  Startup Entrepreneur. <br />-->
 <!--                  Diversity In Tech Activist. <br />-->
@@ -212,7 +212,7 @@
               <div class="single-team text-center">
                 <img src="assets/img/team/josh.png" alt="" class="img-responsive" />
                 <h4 class="team-member">Josh Sykes</h4>
-                <h6>Lead designer</h6>
+                <h6>Chief Creative officer</h6>
 <!--                <p>-->
 <!--                  Startup Entrepreneur. <br />-->
 <!--                  Diversity In Tech Activist. <br />-->
@@ -220,16 +220,16 @@
 <!--                </p>-->
                 <ul class="team-social">
                   <li>
-                    <a href="https://www.facebook.com/cassiebettscouture" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li>
-                    <a href="https://twitter.com/cassiebetts" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
                   </li>
                   <li>
-                    <a href="https://www.instagram.com/instabetts" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/in/cassiebetts" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
@@ -238,23 +238,24 @@
               <div class="single-team text-center">
                 <img src="assets/img/team/MARTY_head_eman.jpg" alt="" class="img-responsive" />
                 <h4 class="team-member">Eman Barkley</h4>
-                <h6>Asst. Manager</h6>
+                <h6>Exec Asst to the CEO
+                </h6>
 <!--                <p>-->
 <!--                  High School Freshman. Student Teacher. <br />-->
 <!--                  Aspiring Engineer.-->
 <!--                </p>-->
                 <ul class="team-social">
                   <li>
-                    <a href="https://www.facebook.com/cnj.smith.1" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li>
-                    <a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
                   </li>
                   <li>
-                    <a href="https://www.instagram.com/therealmisla/ " target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a href="https://www.youtube.com/channel/UCD-EbiAenQUzloDRkB7M4AA?view_as=subscriber" target="_blank"><i class="fa fa-youtube"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
                   </li>
                 </ul>
               </div>
@@ -265,7 +266,7 @@
               <div class="single-team text-center">
                 <img src="assets/img/team/MARTY_head_armanti.jpg" alt="" class="img-responsive" />
                 <h4 class="team-member">Armanti Benjamin</h4>
-                <h6>Senior Developer</h6>
+                <h6>Social Media</h6>
 <!--                <p>-->
 <!--                  Startup Entrepreneur. <br>-->
 <!--                  Diversity In Tech Activist. <br />-->
@@ -273,16 +274,16 @@
 <!--                </p>-->
                 <ul class="team-social">
                   <li>
-                    <a href="https://www.facebook.com/cassiebettscouture" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li>
-                    <a href="https://twitter.com/cassiebetts" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
                   </li>
                   <li>
-                    <a href="https://www.instagram.com/instabetts" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/in/cassiebetts" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
@@ -291,7 +292,7 @@
               <div class="single-team text-center">
                 <img src="assets/img/team/cam.webp" alt="" class="img-responsive" />
                 <h4 class="team-member">Cameron Smith</h4>
-                <h6>Asst. Web Designer</h6>
+                <h6>Asst Web Developer</h6>
 <!--                <p>-->
 <!--                  High School Freshman. Student Teacher. <br />-->
 <!--                  Aspiring Engineer.-->
@@ -369,7 +370,7 @@
               <div class="single-team text-center">
                 <img src="assets/img/team/bilal.png" alt="M Bilal" class="img-responsive" />
                 <h4 class="team-member">M Bilal</h4>
-                <h6>Web Developer </h6>
+                <h6>Senior Web Developer </h6>
 <!--                <p>-->
 <!--                  Web Developer <br />-->
 <!--                  Future Youtuber. <br />-->
@@ -416,8 +417,8 @@
                 </p>
               </div>
               <div class="single-testimonial">
-                <div class="testimonial-author"><img src="assets/img/testimonial/1.jpg" alt="" /></div>
-                <h6>JOSEPH T ROUZAN</h6>
+                <div class="testimonial-author"><img src="assets/img/Vermont_Slauson1-logo.png" alt="Logo" style="background-color: white" /></div>
+                <h6>VSEDC</h6>
                 <span>Executive Director VSEDC</span>
                 <p class="testimonial-quote">
                   The primary mission of VSEDC is to facilitate community development of the South Los Angeles area by providing programs structured to revitalize the physical, economic and social life of the
