--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <!-- SITE TITLE -->
-  <title>MISLA - Hire Us to build your website</title>
+  <title>MISLA - Digital Literacy Academy</title>
   <!-- FAVICON -->
   <link rel="shortcut icon" type="image/png" href="assets/img/favicon.ico" />
   <!-- BOOTSTRAP CSS-->
