--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               <div class="single-team text-center">
                 <img src="assets/img/team/bilal.png" alt="M Bilal" class="img-responsive" />
                 <h4 class="team-member">M Bilal</h4>
-                <h6>Senior Web Developer </h6>
+                <h6>Frontend Developer </h6>
 <!--                <p>-->
 <!--                  Web Developer <br />-->
 <!--                  Future Youtuber. <br />-->
