--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/MARTY_head_CASSIE.jpg" alt="" class="img-responsive" />
+                <img src="assets/img/team/MARTY_head_CASSIE.webp" alt="Cassie Betts" class="img-responsive" />
                 <h4 class="team-member">Cassie Betts</h4>
                 <h6>Founder/ CEO</h6>
 <!--                <p>-->
@@ -210,7 +210,7 @@
             </div>
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/josh.png" alt="" class="img-responsive" />
+                <img src="assets/img/team/josh.webp" alt="Josh Sykes" class="img-responsive" />
                 <h4 class="team-member">Josh Sykes</h4>
                 <h6>Chief Creative officer</h6>
 <!--                <p>-->
@@ -236,7 +236,7 @@
             </div>
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/MARTY_head_eman.jpg" alt="" class="img-responsive" />
+                <img src="assets/img/team/MARTY_head_eman.webp" alt="Eman Barkley" class="img-responsive" />
                 <h4 class="team-member">Eman Barkley</h4>
                 <h6>Exec Asst to the CEO
                 </h6>
@@ -264,7 +264,7 @@
 
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/MARTY_head_armanti.jpg" alt="" class="img-responsive" />
+                <img src="assets/img/team/MARTY_head_armanti.webp" alt="Armanti Benjamin" class="img-responsive" />
                 <h4 class="team-member">Armanti Benjamin</h4>
                 <h6>Social Media</h6>
 <!--                <p>-->
@@ -290,7 +290,7 @@
             </div>
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/cam.webp" alt="" class="img-responsive" />
+                <img src="assets/img/team/cam.webp" alt="Cameron Smith" class="img-responsive" />
                 <h4 class="team-member">Cameron Smith</h4>
                 <h6>Asst Web Developer</h6>
 <!--                <p>-->
@@ -315,7 +315,7 @@
             </div>
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/jai.webp" alt="" class="img-responsive" />
+                <img src="assets/img/team/jai.webp" alt="Jaiden Smith" class="img-responsive" />
                 <h4 class="team-member">Jaiden Smith</h4>
                 <h6>Asst. to the Code Ninja</h6>
 <!--                <p>-->
@@ -341,7 +341,7 @@
             </div>
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/2.png" alt="" class="img-responsive" />
+                <img src="assets/img/team/2.webp" alt="Chris Clarke" class="img-responsive" />
                 <h4 class="team-member">Chris Clarke</h4>
                 <h6>consultant code ninja</h6>
 <!--                <p>-->
@@ -368,7 +368,7 @@
 
             <div class="col-md-3 col-sm-6">
               <div class="single-team text-center">
-                <img src="assets/img/team/bilal.png" alt="M Bilal" class="img-responsive" />
+                <img src="assets/img/team/bilal.webp" alt="M Bilal" class="img-responsive" />
                 <h4 class="team-member">M Bilal</h4>
                 <h6>Frontend Developer </h6>
 <!--                <p>-->
@@ -405,7 +405,7 @@
           <div class="container">
             <div class="testimonial-list text-center">
               <div class="single-testimonial">
-                <div class="testimonial-author"><img src="assets/img/testimonial/4.jpg" alt="" /></div>
+                <div class="testimonial-author"><img src="assets/img/testimonial/4.webp" alt="Philip North" /></div>
                 <h6>Philip North</h6>
                 <span>CEO &amp; Founder Code District</span>
                 <p class="testimonial-quote">
@@ -423,7 +423,7 @@
                 </p>
               </div>
               <div class="single-testimonial">
-                <div class="testimonial-author"><img src="assets/img/testimonial/2.jpg" alt="" /></div>
+                <div class="testimonial-author"><img src="assets/img/testimonial/2.webp" alt="Kandee Lewis" /></div>
                 <h6>Kandee Lewis</h6>
                 <span>Ceo &amp; Founder Positive Results Corporation</span>
                 <p class="testimonial-quote">
@@ -432,7 +432,7 @@
                 </p>
               </div>
               <div class="single-testimonial">
-                <div class="testimonial-author"><img src="assets/img/testimonial/3.jpg" alt="" /></div>
+                <div class="testimonial-author"><img src="assets/img/testimonial/3.webp" alt="Raymond ealy" /></div>
                 <h6>Raymond ealy</h6>
                 <span>Director &amp; Founder Steam Coders</span>
                 <p class="testimonial-quote">
@@ -466,7 +466,7 @@
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                     <input type="hidden" name="cmd" value="_s-xclick" /> <input type="hidden" name="hosted_button_id" value="BDNXK82JAHUE2" />
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" />
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                    <img alt="pixel" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
                   </form>
                 </div>
               </div>
@@ -481,7 +481,7 @@
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                     <input type="hidden" name="cmd" value="_s-xclick" /> <input type="hidden" name="hosted_button_id" value="3BMFGSQ8467H4" />
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" />
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                    <img alt="pixel" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
                   </form>
                 </div>
               </div>
@@ -496,7 +496,7 @@
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                     <input type="hidden" name="cmd" value="_s-xclick" /> <input type="hidden" name="hosted_button_id" value="GNSBVCMZVMRZ6" />
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" />
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                    <img alt="pixel" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
                   </form>
                 </div>
               </div>
@@ -511,7 +511,7 @@
                   <form action="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZMSR4TPCGSFMC¤cy_code=USD" method="post" target="_blank">
                     <input type="hidden" name="cmd" value="_s-xclick" /> <input type="hidden" name="hosted_button_id" value="X2CPN574F43KS" />
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" />
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                    <img alt="pixel" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
                   </form>
                 </div>
               </div>
@@ -712,8 +712,6 @@
 <script src="assets/js/validator.min.js"></script>
 <!-- MAGNIFICANT JS -->
 <script src="assets/js/jquery.magnific-popup.min.js"></script>
-<!-- GOOGLE MAP JS -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChJoxGL2coqWo3NdVla4EFmaKP6KXtxI0"></script>
 <!-- scripts js -->
 <script src="assets/js/scripts.js"></script>
 </body>
