--- a/index.html
+++ b/index.html
@@ -245,16 +245,13 @@
 <!--                </p>-->
                 <ul class="team-social">
                   <li>
-                    <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/moni.boo1" target="_blank"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li>
-                    <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="http://instagram.com/mzoliviadope" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
+                    <a href="https://www.linkedin.com/in/eman-barkley-2862671b2" target="_blank"><i class="fa fa-youtube"></i></a>
                   </li>
                 </ul>
               </div>
