--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <!-- FONTS -->
 <!--  -->
-  <link rel="canonical" href="http://misla.org/" />
+  <link rel="canonical" href="https://misla.org/" />
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="MISLA - Hire Us to build your website">
   <meta property="og:description" content="Coding Bootcamps. Learn to code LIKE A BOSS with one of our ongoing bootcamps. Animation. Video Game Design & Development. Web Design...">
-  <meta property="og:url" content="http://misla.org/">
+  <meta property="og:url" content="https://misla.org/">
   <meta property="og:site_name" content="MISLA">
-  <meta property="og:image" content="https://www.misla.org/assets/img/preview-misla.png">
-  <meta property="og:image:secure_url" content="https://www.misla.org/assets/img/preview-misla.png">
+  <meta property="og:image" content="https://misla.org/assets/img/preview-misla.png">
+  <meta property="og:image:secure_url" content="https://misla.org/assets/img/preview-misla.png">
   <meta property="og:image:width" content="500">
   <meta property="og:image:height" content="250">
   <meta property="og:image:alt" content="MISLA">
@@ -41,7 +41,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Marty World - 2020 Coding + Creative Camps">
   <meta name="twitter:description" content="Coding Bootcamps. Learn to code LIKE A BOSS with one of our ongoing bootcamps. Animation. Video Game Design & Development. Web Design...">
-  <meta name="twitter:image" content="https://www.misla.org/assets/img/preview-misla.png">
+  <meta name="twitter:image" content="https://misla.org/assets/img/preview-misla.png">
 <!-- / -->
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
