--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <a href="http://instagram.com/mzoliviadope" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a href="https://www.linkedin.com/in/eman-barkley-2862671b2" target="_blank"><i class="fa fa-youtube"></i></a>
+                    <a href="https://www.linkedin.com/in/eman-barkley-2862671b2" target="_blank"><i class="fa fa-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
