--- a/index.html
+++ b/index.html
@@ -219,16 +219,7 @@
 <!--                </p>-->
                 <ul class="team-social">
                   <li>
-                    <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                  </li>
-                  <li>
-                    <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://instagram.com/sykesvectorla" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                 </ul>
               </div>
@@ -270,16 +261,13 @@
 <!--                </p>-->
                 <ul class="team-social">
                   <li>
-                    <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/Armantii" target="_blank"><i class="fa fa-twitter"></i></a>
                   </li>
                   <li>
-                    <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/armanti/" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/armanti-benjamin-818119161" target="_blank"><i class="fa fa-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
