--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <a href="https://www.facebook.com/moni.boo1" target="_blank"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li>
-                    <a href="http://instagram.com/mzoliviadope" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://instagram.com/mzoliviadope" target="_blank"><i class="fa fa-instagram"></i></a>
                   </li>
                   <li>
                     <a href="https://www.linkedin.com/in/eman-barkley-2862671b2" target="_blank"><i class="fa fa-linkedin"></i></a>
